--- a/Rule-Builder.html
+++ b/Rule-Builder.html
@@ -117,10 +117,14 @@
             this.id = 'rule_' + Rule.index;
 
             this.variables = ['label', 'amount', 'transactionNumber',
-                'date', 'accountBalance', 'accountNumber',
+                'date', 'accountBalance', 'accountInstitution', 'accountNumber',
                 'accountName', 'contraAccountNumber', 'contraAccountName',
                 'internal', 'transactionType', 'description'
             ];
+			
+			this.operators = ['=', '≠', '>', '<', '≥', '≤'];
+			this.operatorsNormal = ['==', '!=', '>', '<', '>=', '<='];
+
 
             this.ifStatementList = [];
             this.thenStatementList = [];
@@ -170,6 +174,19 @@
                 }
                 return select;
             }
+			
+			this.getOperatorElement = function (type) {
+				var select = document.createElement('select');
+				var operators = (type === 'if') ? this.operators : ['='];
+				for (var i in operators) {
+					var operator = operators[i];
+					var option = document.createElement('option');
+					option.innerHTML = operator;
+					select.appendChild(option);
+				}
+				select.value = '=';
+				return select;				
+            }
 
             this.getPopulatedStatementsElement = function (type, statements) {
                 var statementList = this.getStatementList(type);
@@ -202,7 +219,7 @@
             this.getStatementList = function (type) {
                 if (type === 'if') {
                     return this.ifStatementList;
-                } else if (type == 'then') {
+				} else if (type == 'then') {
                     return this.thenStatementList;
                 }
             }
@@ -220,7 +237,12 @@
                 statementElement.id = this.id + '_' + type + '_' + i;
                 var keyElement = this.getKeyElement();
                 keyElement.id = statementElement.id + '_key';
-                keyElement.addEventListener('change', this.switchValueElement(this));
+                keyElement.addEventListener('change', this.switchKeyElement(this));
+				
+				var operatorElement = this.getOperatorElement(type);
+				operatorElement.id = statementElement.id + '_operator';
+
+				
                 var valueElement = this.getValueElement();
                 valueElement.id = statementElement.id + '_value';
 
@@ -239,8 +261,6 @@
                 }
                 statementText.style.display = 'inline-block';
                 statementText.style.width = '50px';
-                var operatorText = document.createElement('span');
-                operatorText.innerHTML = ' = ';
 
                 var removeStatementButton = document.createElement('button');
                 var addStatementButton = document.createElement('button');
@@ -252,7 +272,7 @@
 
                 statementElement.appendChild(statementText);
                 statementElement.appendChild(keyElement);
-                statementElement.appendChild(operatorText);
+                statementElement.appendChild(operatorElement);
                 statementElement.appendChild(valueElement);
                 statementElement.appendChild(removeStatementButton);
                 statementElement.appendChild(addStatementButton);
@@ -260,7 +280,7 @@
                 return statementElement;
             }
 
-            this.switchValueElement = function (that) {
+            this.switchKeyElement = function (that) {
                 return function (event) {
                     var key = event.target.value;
                     var statementId = event.target.parentElement.id;
@@ -273,13 +293,10 @@
                     } else if (valueElement.tagName !== 'INPUT') {
                         newValueElement = that.getValueElement();
                     }
-                    newValueElement.id = valueElement.id;
-                    valueElement.replaceWith(newValueElement);
-
-                    console.log(valueElement);
-                    // if(key)
-                    console.log(event);
-                    console.log(event.originalTarget.value);
+					if (newValueElement !== undefined) {
+						newValueElement.id = valueElement.id;
+						valueElement.replaceWith(newValueElement);
+					}
                 }
             }
 
@@ -342,8 +359,10 @@
                     if (key === 'internal') {
                         value = value === 'TRUE';
                     } else if (key === 'amount' || key === 'accountBalance') {
-                        //check for number & set number
-                    } 
+                        value = parseFloat(value);
+                    } else if (key === 'transactionNumber') {
+                        value = parseInt(value);
+                    }
                     if (value === '') { 
                         value = null;
                     }
@@ -351,15 +370,40 @@
                 }
                 return serializedStatements;
             }
+			
+			this.serializeOperators = function (statements) {
+                var serializedStatements = {};
+                for (var i in statements) {
+                    var statement = statements[i];
+                    var key = document.getElementById(statement.id + '_key').value;
+                    var value = document.getElementById(statement.id + '_operator').value
+                    serializedStatements[key] = this.operatorsNormal[this.operators.indexOf(value)];
+                }
+                return serializedStatements;
+            }
 
             this.serialize = function () {
-                var serializedRule = { if: {}, then: {} };
+                var serializedRule = { if: {}, operator: {}, then: {} };
                 var statementList = this.getStatementList('if');
                 serializedRule.if = this.serializeStatements(statementList);
+				serializedRule.operator = this.serializeOperators(statementList);
                 statementList = this.getStatementList('then');
                 serializedRule.then = this.serializeStatements(statementList);
                 return serializedRule;
             }
+			
+			this.setOperators = function (operators) {
+				var statements = this.getStatementList('if');
+				for (var i in statements) {
+					var statement = statements[i];	
+					var operatorElement = statement.children[2];
+                    var key = statement.children[1].value;
+					var operator = operators[key];
+					operator = this.operators[this.operatorsNormal.indexOf(operator)];					
+					operatorElement.value = operator;
+                }
+			}
+			
 
             var rule = document.createElement('div');
             rule.id = this.id;
@@ -370,6 +414,9 @@
             } else {
                 rule.appendChild(this.getPopulatedStatementsElement('if', config.if));
                 rule.appendChild(this.getPopulatedStatementsElement('then', config.then));
+				if (config.operator !== undefined) {
+					this.setOperators(config.operator);
+				}
             }
 
             var removeRuleButton = document.createElement('button');
